--- a/Doyatisi sitesi/index.html
+++ b/Doyatisi sitesi/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="1.html">Projelerim</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="2.html">İletişim</a>
+          <a class="nav-link" href="2.html">İletmişim</a>
         </li>    
       </ul>
     </div>  
