--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>İlke Doğa Eygi</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -51,21 +51,21 @@
     </ul>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+        <img src="1.jpg" alt="Los Angeles" width="1100" height="500">
         <div class="carousel-caption">
           <h3>Los Angeles</h3>
           <p>We had such a great time in LA!</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+        <img src="2.jpg" alt="Chicago" width="1100" height="500">
         <div class="carousel-caption">
           <h3>Chicago</h3>
           <p>Thank you, Chicago!</p>
         </div>   
       </div>
       <div class="carousel-item">
-        <img src="ny.jpg" alt="New York" width="1100" height="500">
+        <img src="3.jpg" alt="New York" width="1100" height="500">
         <div class="carousel-caption">
           <h3>New York</h3>
           <p>We love the Big Apple!</p>
