--- a/Iletisim.html
+++ b/Iletisim.html
@@ -1,43 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>İlke Doğa Eygi</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <title>Glass</title>
 </head>
+
 <body>
+    <main>
+        <section class="glass">
+            <div class="dashboard">
+                <div class="user">
+                    <img src="./doya.png" alt="">
+                    <h3>Doga Eygi</h3>
+                    <p>Designer</p>
+                </div>
+                <div class="links">
+                    <div class="link">
+                        <img src="./home-page.png" style="width: 25%" alt="">
+                        <a href="./index.html" style="text-decoration: none;">
+                            <h2>Anasayfa</h2>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <img src="./color-wheel.png" style="width: 25%" alt="">
+                        <a href="./Proje.html" style="text-decoration: none;">
+                            <h2>Projelerim</h2>
+                        </a>
+                    </div>
+                    <div class="link">
+                        <img src="./contact.png" style="width: 25%" alt="">
+                        <a href="./iletisim.html" style="text-decoration: none;">
+                            <h2>İletişim</h2>
+                        </a>
+                    </div>
+                </div>
+                <div class="pro">
+                    <h2>"Design is intelligence made visible."</h2>
+                    <img src="./graphic-designer.png" style="width: 35%;" alt="">
+                </div>
+            </div>
+            <div class="games">
+                <div class="status">
+                    <h1>Projelerim</h1>
 
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="#">
-      <img src="logo.jpg" width="70px" height="70px" alt="">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-      <ul class="navbar-nav ">
-        <li class="nav-item ">
-          <a class="nav-link" href="index.html">Anasayfa</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="1.html">Projelerim</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="2.html">İletişim</a>
-        </li>    
-      </ul>
-    </div>  
-  </nav>
-  <br>
+                </div>
+                <div class="cards">
+                    <div class="card">
 
-<div class="container-fluid">
-  <h3>Brand / Logo</h3>
-  <p>The .navbar-brand class is used to highlight the brand/logo/project name of your page.</p>
-</div>
+                    </div>
+                    <div class="card">
 
+                    </div>
+                    <div class="card">
+
+                    </div>
+                    <div class="card">
+
+                    </div>
+                    <div class="card">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
 </body>
+
 </html>
