--- a/Proje.html
+++ b/Proje.html
@@ -46,38 +46,34 @@
             </div>
             <div class="games">
                 <div class="status">
-                    <img src="./tasarım/kolp.png" alt="">
+                    <h1>Projelerim</h1>
+
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <div class="card-info">
-                            <h2 class="">Ben KİMİM!</h2>
-                            <p>Benim adım Doğa. Ben bir Grafik Tasarımcıyım.</p>
-                        </div>
+                        <img src="./tasarım/araba.png" alt="">
+                        <img src="./tasarım/TISS.png" alt="">
+                        <img src="./tasarım/ev.png" alt="">
                     </div>
                     <div class="card">
-                        <div class="card-info">
-                            <div class="card-header">
-                                <h2 class="">Kullandığım Programlar</h2>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-items">
-                                    <img src="./tasarım/Adobe-Illustrator-Featured.jpg" style="width: 30%" alt="">
-                                    <p>Adobe Illustrator</p>
-                                </div>
-                                <div class="card-items">
-                                    <img src="./tasarım/ps.jpg" style="width: 30%;" alt="">
-                                    <p>Adobe Photoshop</p>
-                                </div>
-                                <div class="card-items">
-                                    <img src="./tasarım/blender.jpg" style="width: 30%;" alt="">
-                                    <p>Blender</p>
-                                </div>
-                            </div>
-                        </div>
+                        <img src="./tasarım/havuçç.png" alt="">
+                        <img src="./tasarım/işlkjh.png" alt="">
+                        <img src="./tasarım/kardan admmm.png" alt="">
                     </div>
                     <div class="card">
-
+                        <img src="./tasarım/masaa.png" alt="">
+                        <img src="./tasarım/mor_vazo.png" alt="">
+                        <img src="./tasarım/YARATIKK.png" alt="">
+                    </div>
+                    <div class="card">
+                        <img src="./tasarım/PİK.png" alt="">
+                        <img src="./tasarım/piyon.png" alt="">
+                        <img src="./tasarım/YARATIKK.png" alt="">
+                    </div>
+                    <div class="card">
+                        <img src="./tasarım/masaa.png" alt="">
+                        <img src="./tasarım/mor_vazo.png" alt="">
+                        <img src="./tasarım/YARATIKK.png" alt="">
                     </div>
                 </div>
             </div>
@@ -85,10 +81,6 @@
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
-
-    <div>
-        <h1>asde</h1>
-    </div>
 </body>
 
 </html>
