--- a/Proje.html
+++ b/Proje.html
@@ -51,29 +51,29 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="./tasarım/araba.png" alt="">
-                        <img src="./tasarım/TISS.png" alt="">
-                        <img src="./tasarım/ev.png" alt="">
+                        <img src="./tasarım2/araba.png" alt="">
+                        <img src="./tasarım2/TISS.png" alt="">
+                        <img src="./tasarım2/ev.png" alt="">
                     </div>
                     <div class="card">
-                        <img src="./tasarım/havuçç.png" alt="">
-                        <img src="./tasarım/işlkjh.png" alt="">
-                        <img src="./tasarım/kardan admmm.png" alt="">
+                        <img src="./tasarım2/havuçç.png" alt="">
+                        <img src="./tasarım2/işlkjh.png" alt="">
+                        <img src="./tasarım2/kardan admmm.png" alt="">
                     </div>
                     <div class="card">
-                        <img src="./tasarım/masaa.png" alt="">
-                        <img src="./tasarım/mor_vazo.png" alt="">
-                        <img src="./tasarım/YARATIKK.png" alt="">
+                        <img src="./tasarım2/masaa.png" alt="">
+                        <img src="./tasarım2/mor_vazo.png" alt="">
+                        <img src="./tasarım2/YARATIKK.png" alt="">
                     </div>
                     <div class="card">
-                        <img src="./tasarım/PİK.png" alt="">
-                        <img src="./tasarım/piyon.png" alt="">
-                        <img src="./tasarım/YARATIKK.png" alt="">
+                        <img src="./tasarım2/PİK.png" alt="">
+                        <img src="./tasarım2/piyon.png" alt="">
+                        <img src="./tasarım2/YARATIKK.png" alt="">
                     </div>
                     <div class="card">
-                        <img src="./tasarım/masaa.png" alt="">
-                        <img src="./tasarım/mor_vazo.png" alt="">
-                        <img src="./tasarım/YARATIKK.png" alt="">
+                        <img src="./tasarım2/masaa.png" alt="">
+                        <img src="./tasarım2/mor_vazo.png" alt="">
+                        <img src="./tasarım2/YARATIKK.png" alt="">
                     </div>
                 </div>
             </div>
