--- a/Proje.html
+++ b/Proje.html
@@ -51,36 +51,49 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="./tasarım2/araba.png" alt="">
-                        <img src="./tasarım2/TISS.png" alt="">
-                        <img src="./tasarım2/ev.png" alt="">
+                        <img src="./tasarım2/araba.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/TISS.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/ev.png" alt="" onclick="window.open(this.src)">
                     </div>
-                    <div class="card">
-                        <img src="./tasarım2/havuçç.png" alt="">
-                        <img src="./tasarım2/işlkjh.png" alt="">
-                        <img src="./tasarım2/kardan admmm.png" alt="">
+                    <div class=" card">
+                        <img src="./tasarım2/havuçç.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/işlkjh.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/kardan admmm.png" alt="" onclick="window.open(this.src)">
                     </div>
-                    <div class="card">
-                        <img src="./tasarım2/masaa.png" alt="">
-                        <img src="./tasarım2/mor_vazo.png" alt="">
-                        <img src="./tasarım2/YARATIKK.png" alt="">
+                    <div class=" card">
+                        <img src="./tasarım2/masaa.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/mor_vazo.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/YARATIKK.png" alt="" onclick="window.open(this.src)">
                     </div>
-                    <div class="card">
-                        <img src="./tasarım2/PİK.png" alt="">
-                        <img src="./tasarım2/piyon.png" alt="">
-                        <img src="./tasarım2/YARATIKK.png" alt="">
+                    <div class=" card">
+                        <img src="./tasarım2/PİK.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/piyon.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/YARATIKK.png" alt="" onclick="window.open(this.src)">
                     </div>
-                    <div class="card">
-                        <img src="./tasarım2/masaa.png" alt="">
-                        <img src="./tasarım2/mor_vazo.png" alt="">
-                        <img src="./tasarım2/YARATIKK.png" alt="">
+                    <div class=" card">
+                        <img src="./tasarım2/masaa.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/mor_vazo.png" alt="" onclick="window.open(this.src)">
+                        <img src="./tasarım2/YARATIKK.png" alt="" onclick="window.open(this.src)">
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <div class="circle1"></div>
+    <div class=" circle1">
+    </div>
     <div class="circle2"></div>
+
+    <script>
+        function imgWindow() {
+            window.open("image")
+        }
+    </script>
+
+
+
+
+
+
 </body>
 
 </html>
