--- a/Proje.html
+++ b/Proje.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-    <title>Glass</title>
+    <title>İlke Doga Eygi</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <div class="dashboard">
                 <div class="user">
                     <img src="./doya.png" alt="">
-                    <h3>Doga Eygi</h3>
+                    <h3>İlke Doga Eygi</h3>
                     <p>Designer</p>
                 </div>
                 <div class="links">
