--- a/Iletisim.html
+++ b/Iletisim.html
@@ -15,9 +15,9 @@
         <section class="glass">
             <div class="dashboard">
                 <div class="user">
-                    <img src="./doya.png" alt="">
-                    <h3>İlke Doga Eygi</h3>
-                    <p>Designer</p>
+                    <img src="./doya.png" style="width: 60%" alt="">
+                    <h3>İlke Doğa Eygi</h3>
+                    <p>3D Artist / Graphic Designer</p>
                 </div>
                 <div class="links">
                     <div class="link">
@@ -44,28 +44,55 @@
                     <img src="./graphic-designer.png" style="width: 35%;" alt="">
                 </div>
             </div>
-            <div class="games">
+            <div class="main-content">
                 <div class="status">
-                    <h1>Projelerim</h1>
+                    <h1>İletişim</h1>
 
                 </div>
                 <div class="cards">
                     <div class="card">
+                        <div class="card-info">
+                            <div class="card-header" style="margin-bottom: 50px;">
+                                <h2 class="">Sosyal Medya Hesaplarım</h2>
+                            </div>
+                            <div class="card-body" style="margin-bottom: 40px ;">
+                                <div class=" card-items">
+                                    <a href="https://www.instagram.com/ilkedoga_eygi/">
+                                        <img src="./iconmonstr-instagram-3-240.png" style="width: 40%" alt="">
+                                    </a>
 
+                                </div>
+                                <div class="card-items">
+                                    <a href="https://twitter.com/ilkedogaa">
+                                        <img src="./iconmonstr-twitter-4-240.png" style="width: 40%" alt="">
+                                    </a>
+
+                                </div>
+                                <div class="card-items">
+                                    <a href="https://www.facebook.com/ilkedoga.eygi">
+                                        <img src="./iconmonstr-facebook-4-240.png" style="width: 40%" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="card">
-
-                    </div>
-                    <div class="card">
-
-                    </div>
-                    <div class="card">
-
-                    </div>
-                    <div class="card">
-
+                        <div class="card-info">
+                            <div class="card-header" style="margin-bottom: 25px ;">
+                                <h2 class="">Mail Adresim</h2>
+                            </div>
+                            <div class=" card-body">
+                                <div class="card-items-mail" style="margin-bottom: 40px">
+                                    <a>
+                                        <img src="./iconmonstr-gmail-1-240.png" style="width: 30%" alt="">
+                                    </a>
+                                    <p>ilkedogaeygi@gmail.com</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
     </main>
