--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                     <div class="link">
                         <img src="./home-page.png" style="width: 25%" alt="">
                         <a href="./index.html" style="text-decoration: none;">
-                            <h2>Anasayfa</h2>
+                            <h2>Home</h2>
                         </a>
                     </div>
                     <div class="link">
                         <img src="./color-wheel.png" style="width: 25%" alt="">
-                        <a href="./Proje.html" style="text-decoration: none;">
-                            <h2>Projelerim</h2>
+                        <a href="./Projects.html" style="text-decoration: none;">
+                            <h2>Projects</h2>
                         </a>
                     </div>
                     <div class="link">
                         <img src="./contact.png" style="width: 25%" alt="">
-                        <a href="./iletisim.html" style="text-decoration: none;">
-                            <h2>İletişim</h2>
+                        <a href="./Contact.html" style="text-decoration: none;">
+                            <h2>Contact</h2>
                         </a>
                     </div>
                 </div>
@@ -66,25 +66,26 @@
                 <div class="cards">
                     <div class="card">
                         <div class="card-info">
-                            <h2 class="" style="text-align: center; margin-bottom: 10px">Ben KİMİM!</h2>
-                            <p>Benim adım Doğa. Genel olarak self-taught ve self-motivated bir şekilde 3D modellemeler
-                                yapıyorum. Aynı
-                                zamanda üniversite
-                                eğitimim sırasında aldığım grafik dersleri doğrultusunda grafik
-                                tasarım çalışmaları ile uğraşıyorum. Çalışmalarımda genel olarak <a
+                            <h2 class="" style="text-align: center; margin-bottom: 10px">Who am I!</h2>
+                            <p>My name is Doğa. Generally, I do 3D models in a self-taught and self-motivated manner. At
+                                the same time, I am dealing with graphic design studies in line with the graphic courses
+                                I took during my university education. In my works, I generally use programs such as <a
                                     href="https://www.blender.org" style="text-decoration: none;">Blender</a>, <a
                                     href="https://www.adobe.com/tr/products/illustrator.html"
                                     style="text-decoration: none;">Adobe Illustrator</a>
-                                ve <a href="https://www.adobe.com/tr/products/photoshop.html"
-                                    style="text-decoration: none;">Adobe Photoshop</a>
-                                gibi programlar kullanmaktayım.
+                                and <a href="https://www.adobe.com/tr/products/photoshop.html"
+                                    style="text-decoration: none;">Adobe Photoshop</a>. I spend most of my free time
+                                doing 3d models based on the objects I see on the internet and around me. It has become
+                                a hobby for me. I can't even imagine myself working in a job other than this one in the
+                                future.
+
                             </p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-info">
                             <div class="card-header">
-                                <h2 class="">Kullandığım Programlar</h2>
+                                <h2 class="">The programs I use</h2>
                             </div>
                             <div class="card-body">
                                 <div class="card-items">
@@ -105,7 +106,7 @@
                     <div class="card">
                         <div class="card-info">
                             <div class="card-header">
-                                <h2 class="">Öne Çıkanlar</h2>
+                                <h2 class="">Highlights</h2>
                             </div>
                             <div class="card-body">
                                 <div class="card-items">
@@ -120,7 +121,7 @@
                                     <div class="container">
                                         <input type="checkbox" id="zoomCheck1">
                                         <label for="zoomCheck1">
-                                            <img src="./tasarım2/mazlum_kardan_adam.png"
+                                            <img src="./tasarım2/roomWithStairs.png"
                                                 style="width: 100%; padding-left: 1rem;">
                                         </label>
                                     </div>
@@ -129,7 +130,7 @@
                                     <div class="container">
                                         <input type="checkbox" id="zoomCheck2">
                                         <label for="zoomCheck2">
-                                            <img src="./tasarım2/oyun makinesi.png"
+                                            <img src="./tasarım2/IceCreamShop.png"
                                                 style="width: 100%; padding-left: 1rem;">
                                         </label>
                                     </div>
