bar fotosu eklendi

--- a/Projects.html
+++ b/Projects.html
@@ -73,10 +73,17 @@
                                 <img src="./tasarım2/roomWithStairs.png" style="width: 100%; padding-left: 1rem;">
                             </label>
                         </div>
+
                         <div class="container">
                             <input type="checkbox" id="zoomCheck19">
                             <label for="zoomCheck19">
                                 <img src="./tasarım2/IceCreamShop.png" style="width: 100%; padding-left: 1rem;">
+                            </label>
+                        </div>
+                        <div class="container">
+                            <input type="checkbox" id="zoomCheck20">
+                            <label for="zoomCheck20">
+                                <img src="./tasarım2/bar.png" style="width: 100%; padding-left: 1rem;">
                             </label>
                         </div>
                     </div>
