--- a/Projects.html
+++ b/Projects.html
@@ -94,6 +94,15 @@
                                 <img src="./tasarım2/sakız_makinesi.png" style="width: 100%; padding-left: 1rem;">
                             </label>
                         </div>
+
+                        <div class="container">
+                            <input type="checkbox" id="zoomCheck2">
+                            <label for="zoomCheck2">
+                                <img src="./tasarım2/ev2.png" style="width: 100%; padding-left: 1rem;">
+                            </label>
+                        </div>
+                    </div>
+                    <div class="card">
                         <div class="container">
                             <input type="checkbox" id="zoomCheck1">
                             <label for="zoomCheck1">
@@ -101,9 +110,9 @@
                             </label>
                         </div>
                         <div class="container">
-                            <input type="checkbox" id="zoomCheck2">
-                            <label for="zoomCheck2">
-                                <img src="./tasarım2/ev2.png" style="width: 100%; padding-left: 1rem;">
+                            <input type="checkbox" id="zoomCheck21">
+                            <label for="zoomCheck21">
+                                <img src="./tasarım2/CoffeeMachine.png" style="width: 100%; padding-left: 1rem;">
                             </label>
                         </div>
                     </div>
