--- a/Projects.html
+++ b/Projects.html
@@ -108,6 +108,20 @@
                             </label>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="container">
+                            <input type="checkbox" id="zoomCheck22">
+                            <label for="zoomCheck22">
+                                <img src="./tasarım2/Giant.jpg" style="width: 100%; padding-left: 1rem;">
+                            </label>
+                        </div>
+                        <div class="container">
+                            <input type="checkbox" id="zoomCheck23">
+                            <label for="zoomCheck23">
+                                <img src="./tasarım2/robot.jpg" style="width: 100%; padding-left: 1rem;">
+                            </label>
+                        </div>
+                    </div>
 
                     <div class="card">
                         <div class="container">
