--- a/Projects.html
+++ b/Projects.html
@@ -121,6 +121,12 @@
                                 <img src="./tasarım2/robot.jpg" style="width: 100%; padding-left: 1rem;">
                             </label>
                         </div>
+                        <div class="container">
+                            <input type="checkbox" id="zoomCheck24">
+                            <label for="zoomCheck24">
+                                <img src="./tasarım2/karetegirl.png" style="width: 100%; padding-left: 1rem;">
+                            </label>
+                        </div>
                     </div>
 
                     <div class="card">
